--- a/Languages/Russian/DefInjected/ThingDef/Races_RustedTrooper.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Races_RustedTrooper.xml
@@ -2,20 +2,20 @@
 <LanguageData>
   
   <!-- EN: rusted stormtrooper -->
-  <NAT_RustedTrooper.label>rusted stormtrooper</NAT_RustedTrooper.label>
+  <NAT_RustedTrooper.label>ржавый десантник</NAT_RustedTrooper.label>
   <!-- EN: Bioferrite pieces shaped like human figure. Rusted stormtroopers have bioferrite shield that protects them from incoming damage. -->
-  <NAT_RustedTrooper.description>Bioferrite pieces shaped like human figure. Rusted stormtroopers have bioferrite shield that protects them from incoming damage.</NAT_RustedTrooper.description>
+  <NAT_RustedTrooper.description>Куски биоферрита напоминающие человеческую фигуру. В отличие от других ржавчину у десантников есть прочная биоферритовая оболочка, которую необходимо уничтожить прежде чем на прямую атаковать его.</NAT_RustedTrooper.description>
   <!-- EN: Rusted shield -->
-  <NAT_RustedTrooper.comps.CompRustedShield.renderProps.debugLabel>Rusted shield</NAT_RustedTrooper.comps.CompRustedShield.renderProps.debugLabel>
+  <NAT_RustedTrooper.comps.CompRustedShield.renderProps.debugLabel>Ржавый щит</NAT_RustedTrooper.comps.CompRustedShield.renderProps.debugLabel>
   <!-- EN: head -->
-  <NAT_RustedTrooper.tools.head.label>head</NAT_RustedTrooper.tools.head.label>
+  <NAT_RustedTrooper.tools.head.label>голова</NAT_RustedTrooper.tools.head.label>
   <!-- EN: left claw -->
-  <NAT_RustedTrooper.tools.left_claw.label>left claw</NAT_RustedTrooper.tools.left_claw.label>
+  <NAT_RustedTrooper.tools.left_claw.label>левая рукв</NAT_RustedTrooper.tools.left_claw.label>
   <!-- EN: claw -->
-  <NAT_RustedTrooper.tools.left_claw.labelNoLocation>claw</NAT_RustedTrooper.tools.left_claw.labelNoLocation>
+  <NAT_RustedTrooper.tools.left_claw.labelNoLocation>рука</NAT_RustedTrooper.tools.left_claw.labelNoLocation>
   <!-- EN: right claw -->
-  <NAT_RustedTrooper.tools.right_claw.label>right claw</NAT_RustedTrooper.tools.right_claw.label>
+  <NAT_RustedTrooper.tools.right_claw.label>правая рука</NAT_RustedTrooper.tools.right_claw.label>
   <!-- EN: claw -->
-  <NAT_RustedTrooper.tools.right_claw.labelNoLocation>claw</NAT_RustedTrooper.tools.right_claw.labelNoLocation>
+  <NAT_RustedTrooper.tools.right_claw.labelNoLocation>рука</NAT_RustedTrooper.tools.right_claw.labelNoLocation>
   
 </LanguageData>
